--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^12.0.0"
+    "ngx-bootstrap": "^12.0.0",
+    "typescript": "^5.6.2"
   }
 }
