--- a/client/angular.json
+++ b/client/angular.json
@@ -27,7 +27,10 @@
             "styles": [
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                    "node_modules/ngx-toastr/toastr.css",
+                    "../node_modules/bootswatch/dist/quartz/bootstrap.min.css",
               "src/styles.css"
+        
             ],
             "scripts": []
           },
